--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "vue-toasted",
-  "description": "Responsive Touch Compatible Toast plugin for VueJS 2+",
+  "description": "Port of vue-toasted to Vue 3",
   "version": "1.1.28",
-  "author": "Shakeeb Sadikeen <shakee.zats@gmail.com>",
+  "author": "Andrew Bastin <andrew@hoppscotch.io>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/shakee93/vue-toasted.git"
+    "url": "https://github.com/AndrewBastin/vue-toasted.git"
   },
   "main": "./dist/vue-toasted.min.js",
   "types": "./types/index.d.ts",
