--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "main": "./dist/vue-toasted.min.js",
   "types": "./types/index.d.ts",
+  "browserslist": [
+    "last 7 versions"
+  ],
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.js --progress --hide-modules",
+    "dev": "vite",
+    "build": "vite build",
     "build-local-watch": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.js --progress --hide-modules --watch",
     "release": "npm run build && npm run core && npm run css",
     "css": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.css.js --progress --hide-modules ",
@@ -31,32 +34,17 @@
     "vue-toastr",
     "toastr"
   ],
-  "dependencies": {},
+  "peerDependencies": {
+    "vue": "^3.2.37"
+  },
+  "dependencies": {
+    "vite": "^3.0.9"
+  },
   "devDependencies": {
-    "animejs": "^2.2.0",
-    "autoprefixer": "^7.2.6",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-latest": "^6.24.1",
-    "cross-env": "^3.2.4",
-    "css-loader": "^0.25.0",
-    "es6-object-assign": "^1.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.9.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "animejs": "^3.2.1",
+    "autoprefixer": "^10.4.8",
     "hammerjs": "^2.0.8",
-    "node-sass": "^4.13.1",
-    "postcss-loader": "^2.1.6",
-    "requirejs": "^2.3.6",
-    "sass-loader": "^6.0.7",
-    "shortid": "^2.2.15",
-    "style-loader": "^0.18.2",
-    "vue-loader": "^11.0.0",
-    "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^2.7.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-dev-server": "^2.11.5"
+    "sass": "^1.54.5"
   }
 }
