--- a/package.json
+++ b/package.json
@@ -41,10 +41,11 @@
     "vite": "^3.0.9"
   },
   "devDependencies": {
+    "@types/node": "^18.7.13",
     "@vitejs/plugin-vue": "^3.0.3",
     "animejs": "^3.2.1",
-    "autoprefixer": "^10.4.8",
     "hammerjs": "^2.0.8",
-    "sass": "^1.54.5"
+    "sass": "^1.54.5",
+    "shortid": "^2.2.16"
   }
 }
