--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "vite": "^3.0.9"
   },
   "devDependencies": {
+    "@types/hammerjs": "^2.0.41",
     "@types/node": "^18.7.13",
+    "@types/shortid": "^0.0.29",
     "@vitejs/plugin-vue": "^3.0.3",
     "animejs": "^3.2.1",
     "hammerjs": "^2.0.8",
