--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vue-toasted",
+  "name": "@andrewbastin/vue-toasted",
   "description": "Port of vue-toasted to Vue 3",
-  "version": "1.1.28",
+  "version": "0.0.1",
+  "private": false,
   "author": "Andrew Bastin <andrew@hoppscotch.io>",
   "license": "MIT",
   "repository": {
@@ -23,11 +24,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build-local-watch": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.js --progress --hide-modules --watch",
-    "release": "npm run build && npm run core && npm run css",
-    "css": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.css.js --progress --hide-modules ",
-    "core": "cross-env NODE_ENV=production webpack --config ./build/webpack.release.core.js --progress --hide-modules",
-    "es": "babel src --presets babel-preset-es2015 --out-dir dist"
+    "release": "npm run build"
   },
   "keywords": [
     "toast",
@@ -45,7 +42,6 @@
     "vue": "^3.2.37"
   },
   "dependencies": {
-    "vite": "^3.0.9"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.41",
@@ -55,6 +51,7 @@
     "animejs": "^3.2.1",
     "hammerjs": "^2.0.8",
     "sass": "^1.54.5",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "vite": "^3.0.9"
   }
 }
