--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hoppscotch/vue-toasted",
   "description": "Port of vue-toasted to Vue 3",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "private": false,
   "author": "Andrew Bastin <andrew@hoppscotch.io>",
   "license": "MIT",
@@ -14,7 +14,7 @@
   ],
   "main": "dist/vue-toasted.umd.js",
   "module": "dist/vue-toasted.mjs",
-  "types": "types/index.d.ts",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/vue-toasted.mjs",
@@ -30,7 +30,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && copyfiles --flat src/index.d.ts dist",
     "release": "npm run build"
   },
   "keywords": [
@@ -48,14 +48,13 @@
   "peerDependencies": {
     "vue": "^3.2.37"
   },
-  "dependencies": {
-  },
   "devDependencies": {
     "@types/hammerjs": "^2.0.41",
     "@types/node": "^18.7.13",
     "@types/shortid": "^0.0.29",
     "@vitejs/plugin-vue": "^3.0.3",
     "animejs": "^3.2.1",
+    "copyfiles": "^2.4.1",
     "hammerjs": "^2.0.8",
     "sass": "^1.54.5",
     "shortid": "^2.2.16",
