--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "toastr"
   ],
   "peerDependencies": {
-    "vue": "^3.2.37"
+    "vue": "3.5.13"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.41",
@@ -59,6 +59,10 @@
     "hammerjs": "^2.0.8",
     "sass": "^1.54.5",
     "shortid": "^2.2.16",
-    "vite": "^3.0.9"
+    "vite": "^3.0.9",
+    "vue": "^3.5.13",
+    "vue-i18n": "11.1.3",
+    "typescript": "5.5.4",
+    "vue-tsc": "2.2.8"
   }
 }
